# shuck-convert

./: .gitignore  README.md  pyproject.toml  server.json  smithery.yaml
src/shuck_convert/: __init__.py  cli.py  server.py
src/shuck_convert/core/: doc_to_md.py  md_to_docx.py
